CC-21131 Fixed `Configure` button visibility in the Shopping list (#2268)
CC-21131 Fixed `Configure` button visibility in the Shopping list

--- a/Bundles/ShoppingListPage/src/SprykerShop/Yves/ShoppingListPage/Theme/default/components/molecules/shopping-list/shopping-list.scss
+++ b/Bundles/ShoppingListPage/src/SprykerShop/Yves/ShoppingListPage/Theme/default/components/molecules/shopping-list/shopping-list.scss
@@ -15,13 +15,30 @@
             border-top: 1px solid $setting-color-light;
 
             &--disable {
-                opacity: 0.4;
+                position: relative;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    height: 100%;
+                    width: 100%;
+                    background: $setting-color-white;
+                    opacity: 0.4;
+                    cursor: not-allowed;
+                }
             }
 
             &:first-child,
             &--borderless {
                 border: none;
             }
+        }
+
+        &__configuration-button {
+            position: relative;
+            z-index: $setting-zi-element;
         }
 
         @content;
